Closed Bug 1739663 Opened 3 years ago Closed 3 years ago

Intermittent TV Last test finished | application crashed [@ mozilla::layers::InputQueue::Clear()]

Categories

(Core :: Panning and Zooming, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- unaffected
firefox95 --- unaffected
firefox96 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: botond)

References

(Regression)

Details

(Keywords: crash, intermittent-failure, regression)

Crash Data

Attachments

(1 file)

Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=357140147&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/AQLRnj3RSZqTfm-SntHCjA/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/AQLRnj3RSZqTfm-SntHCjA/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2021-11-05T15:08:27.375Z] 15:08:27     INFO -  TEST-START | editor/libeditor/tests/test_bug767684.html
[task 2021-11-05T15:08:37.472Z] 15:08:37     INFO -  TEST-OK | editor/libeditor/tests/test_bug767684.html | took 1233ms
[task 2021-11-05T15:08:37.472Z] 15:08:37     INFO -  TEST-START | Shutdown
[task 2021-11-05T15:08:37.472Z] 15:08:37     INFO -  Passed:  1
[task 2021-11-05T15:08:37.472Z] 15:08:37     INFO -  Failed:  0
[task 2021-11-05T15:08:37.472Z] 15:08:37     INFO -  Todo:    0
[task 2021-11-05T15:08:37.472Z] 15:08:37     INFO -  Mode:    e10s
[task 2021-11-05T15:08:37.473Z] 15:08:37     INFO -  Slowest: 1233ms - /tests/editor/libeditor/tests/test_bug767684.html
[task 2021-11-05T15:08:37.473Z] 15:08:37     INFO -  SimpleTest FINISHED
[task 2021-11-05T15:08:38.670Z] 15:08:38     INFO -  wait for org.mozilla.geckoview.test_runner complete; top activity=com.android.launcher3
[task 2021-11-05T15:08:38.670Z] 15:08:38     INFO -  runtestsremote.py | Application ran for: 0:00:15.800383
[task 2021-11-05T15:08:38.786Z] 15:08:38     INFO -  mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/VGqSUB3qQJ28yX7CLNB9jw/artifacts/public/build/target.crashreporter-symbols.zip
[task 2021-11-05T15:08:41.632Z] 15:08:41     INFO -  mozcrash Copy/paste: /builds/worker/fetches/minidump_stackwalk/minidump_stackwalk /tmp/tmpf02mz4qb/7d53886a-e1b8-51b9-dbf6-761743cfc02a.dmp /tmp/tmpcqwnzori https://symbols.mozilla.org/
[task 2021-11-05T15:08:45.710Z] 15:08:45     INFO -  mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/7d53886a-e1b8-51b9-dbf6-761743cfc02a.dmp
[task 2021-11-05T15:08:45.711Z] 15:08:45     INFO -  mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/7d53886a-e1b8-51b9-dbf6-761743cfc02a.extra
[task 2021-11-05T15:08:45.715Z] 15:08:45  WARNING -  PROCESS-CRASH | Last test finished | application crashed [@ mozilla::layers::InputQueue::Clear()]
[task 2021-11-05T15:08:45.715Z] 15:08:45     INFO -  Mozilla crash reason: MOZ_ASSERT(sControllerThread && sControllerThread->IsOnCurrentThread())
[task 2021-11-05T15:08:45.715Z] 15:08:45     INFO -  Crash dump filename: /tmp/tmpf02mz4qb/7d53886a-e1b8-51b9-dbf6-761743cfc02a.dmp
[task 2021-11-05T15:08:45.715Z] 15:08:45     INFO -  Operating system: Android
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -                    0.0.0 Linux 3.10.0+ #260 SMP PREEMPT Fri May 19 12:48:14 PDT 2017 x86_64
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -  CPU: amd64
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -       family 6 model 6 stepping 3
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -       4 CPUs
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -  GPU: UNKNOWN
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -  Crash reason:  SIGSEGV / SEGV_MAPERR
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -  Crash address: 0x0
[task 2021-11-05T15:08:45.716Z] 15:08:45     INFO -  Process uptime: not available
[task 2021-11-05T15:08:45.717Z] 15:08:45     INFO -  Thread 0 tid 4322 (crashed) 0  libxul.so!mozilla::layers::APZThreadUtils::AssertOnControllerThread() [APZThreadUtils.cpp:5d6a85b1788ecb66fef5ea788eba0817e07db9e2 : 56 + 0x27]
[task 2021-11-05T15:08:45.717Z] 15:08:45     INFO -      rax = 0x00007f125ba6327d   rdx = 0x0000000000000004
[task 2021-11-05T15:08:45.717Z] 15:08:45     INFO -      rcx = 0x00007f12715eec50   rbx = 0x00007f124a8b1600
[task 2021-11-05T15:08:45.717Z] 15:08:45     INFO -      rsi = 0x00007fff9840a530   rdi = 0x000000000000001b
[task 2021-11-05T15:08:45.718Z] 15:08:45     INFO -      rbp = 0x00007fff9840b650   rsp = 0x00007fff9840b650
[task 2021-11-05T15:08:45.718Z] 15:08:45     INFO -       r8 = 0x000000000000ffff    r9 = 0x0000000000000000
[task 2021-11-05T15:08:45.718Z] 15:08:45     INFO -      r10 = 0x00007f127b6ec3d0   r11 = 0x0000000000000246
[task 2021-11-05T15:08:45.718Z] 15:08:45     INFO -      r12 = 0x00007fff9840b6a8   r13 = 0xffffffffffffffff
[task 2021-11-05T15:08:45.718Z] 15:08:45     INFO -      r14 = 0x0000000000000000   r15 = 0x00007fff9840b6a0
[task 2021-11-05T15:08:45.718Z] 15:08:45     INFO -      rip = 0x00007f12555f63cf
[task 2021-11-05T15:08:45.719Z] 15:08:45     INFO -      Found by: given as instruction pointer in context
[task 2021-11-05T15:08:45.719Z] 15:08:45     INFO -   1  libxul.so!mozilla::layers::InputQueue::Clear() [InputQueue.cpp:5d6a85b1788ecb66fef5ea788eba0817e07db9e2 : 1024 + 0x5]
[task 2021-11-05T15:08:45.719Z] 15:08:45     INFO -      rbp = 0x00007fff9840b670   rsp = 0x00007fff9840b660
[task 2021-11-05T15:08:45.719Z] 15:08:45     INFO -      rip = 0x00007f12555eb11d
[task 2021-11-05T15:08:45.719Z] 15:08:45     INFO -      Found by: previous frame's frame pointer
[task 2021-11-05T15:08:45.720Z] 15:08:45     INFO -   2  libxul.so!mozilla::detail::RunnableMethodImpl<RefPtr<mozilla::layers::InputQueue>, void (mozilla::layers::InputQueue::*)(), true, (mozilla::RunnableKind)0, >::Run() [nsThreadUtils.h:5d6a85b1788ecb66fef5ea788eba0817e07db9e2 : 1200 + 0x17]
[task 2021-11-05T15:08:45.720Z] 15:08:45     INFO -      rbp = 0x00007fff9840b680   rsp = 0x00007fff9840b680
[task 2021-11-05T15:08:45.720Z] 15:08:45     INFO -      rip = 0x00007f12555ba735
[task 2021-11-05T15:08:45.720Z] 15:08:45     INFO -      Found by: previous frame's frame pointer
[task 2021-11-05T15:08:45.720Z] 15:08:45     INFO -   3  libxul.so!mozilla::RunAndroidUiTasks() [AndroidUiThread.cpp:5d6a85b1788ecb66fef5ea788eba0817e07db9e2 : 373 + 0x11]
[task 2021-11-05T15:08:45.721Z] 15:08:45     INFO -      rbp = 0x00007fff9840b6e0   rsp = 0x00007fff9840b690
[task 2021-11-05T15:08:45.721Z] 15:08:45     INFO -      rip = 0x00007f12573bc0bd
[task 2021-11-05T15:08:45.721Z] 15:08:45     INFO -      Found by: previous frame's frame pointer
[task 2021-11-05T15:08:45.721Z] 15:08:45     INFO -   4  base.odex + 0xb00926
[task 2021-11-05T15:08:45.721Z] 15:08:45     INFO -      rbp = 0x00007fff9840b7a8   rsp = 0x00007fff9840b6f0
[task 2021-11-05T15:08:45.722Z] 15:08:45     INFO -      rip = 0x00007f126093d926
[task 2021-11-05T15:08:45.722Z] 15:08:45     INFO -      Found by: previous frame's frame pointer
[task 2021-11-05T15:08:45.722Z] 15:08:45     INFO -   5  0x7fff9840bb40
[task 2021-11-05T15:08:45.722Z] 15:08:45     INFO -      rbp = 0x00007fff9840bb40   rsp = 0x00007fff9840b7b8
[task 2021-11-05T15:08:45.722Z] 15:08:45     INFO -      rip = 0x00007fff9840bb40
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -      Found by: previous frame's frame pointer
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -   6  dalvik-LinearAlloc (deleted) + 0xe598
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -      rbp = 0x00007fff9840bb40   rsp = 0x00007fff9840b7c0
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -      rip = 0x00007f127d338598
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -   7  base.odex + 0x8037fa
[task 2021-11-05T15:08:45.723Z] 15:08:45     INFO -      rbp = 0x00007fff9840bb40   rsp = 0x00007fff9840b7d8
[task 2021-11-05T15:08:45.724Z] 15:08:45     INFO -      rip = 0x00007f12606407fa
[task 2021-11-05T15:08:45.724Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.724Z] 15:08:45     INFO -   8  libart.so!art::ArtMethod::Invoke(art::Thread*, unsigned int*, unsigned int, art::JValue*, char const*) + 0x10d
[task 2021-11-05T15:08:45.724Z] 15:08:45     INFO -      rbp = 0x00007fff9840bb40   rsp = 0x00007fff9840b7f0
[task 2021-11-05T15:08:45.724Z] 15:08:45     INFO -      rip = 0x00007f127885146d
[task 2021-11-05T15:08:45.725Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.725Z] 15:08:45     INFO -   9  libart.so!art::interpreter::EnterInterpreterFromEntryPoint(art::Thread*, art::DexFile::CodeItem const*, art::ShadowFrame*) + 0x6a
[task 2021-11-05T15:08:45.725Z] 15:08:45     INFO -      rbx = 0x00007fff9840bb40   rbp = 0x0000000000000000
[task 2021-11-05T15:08:45.725Z] 15:08:45     INFO -      rsp = 0x00007fff9840bb50   r12 = 0x00007fff9840bb90
[task 2021-11-05T15:08:45.726Z] 15:08:45     INFO -      r13 = 0x00007f12789ed05a   r14 = 0x00007fff9840bb90
[task 2021-11-05T15:08:45.726Z] 15:08:45     INFO -      r15 = 0x00007f127d338d50   rip = 0x00007f12789f325a
[task 2021-11-05T15:08:45.726Z] 15:08:45     INFO -      Found by: call frame info
[task 2021-11-05T15:08:45.726Z] 15:08:45     INFO -  10  base.odex + 0x6bf858
[task 2021-11-05T15:08:45.726Z] 15:08:45     INFO -      rsp = 0x00007fff9840bb68   rip = 0x00007f12604fc858
[task 2021-11-05T15:08:45.726Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.727Z] 15:08:45     INFO -  11  dalvik-LinearAlloc (deleted) + 0xed50
[task 2021-11-05T15:08:45.727Z] 15:08:45     INFO -      rsp = 0x00007fff9840bb78   rip = 0x00007f127d338d50
[task 2021-11-05T15:08:45.727Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.727Z] 15:08:45     INFO -  12  libart.so!artQuickToInterpreterBridge + 0x421
[task 2021-11-05T15:08:45.727Z] 15:08:45     INFO -      rsp = 0x00007fff9840bb90   rip = 0x00007f1278d16461
[task 2021-11-05T15:08:45.727Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -  13  dalvik-LinearAlloc (deleted) + 0xed50
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -      rsp = 0x00007fff9840bba0   rip = 0x00007f127d338d50
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -  14  base.odex + 0x6bf86e
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -      rsp = 0x00007fff9840bbb0   rip = 0x00007f12604fc86e
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.728Z] 15:08:45     INFO -  15  base.odex + 0x6bf858
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -      rsp = 0x00007fff9840bbb8   rip = 0x00007f12604fc858
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -  16  dalvik-main space (deleted) + 0x1c28
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -      rsp = 0x00007fff9840bbe8   rip = 0x0000000012c01c28
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -  17  dalvik-main space (deleted) + 0x95d8
[task 2021-11-05T15:08:45.729Z] 15:08:45     INFO -      rsp = 0x00007fff9840bc08   rip = 0x0000000012c095d8
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -  18  dalvik-main space (deleted) + 0x44100
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -      rsp = 0x00007fff9840bc10   rip = 0x0000000012c44100
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -  19  dalvik-main space (deleted) + 0x95d8
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -      rsp = 0x00007fff9840bc20   rip = 0x0000000012c095d8
[task 2021-11-05T15:08:45.730Z] 15:08:45     INFO -      Found by: stack scanning
[task 2021-11-05T15:08:45.731Z] 15:08:45     INFO -  20  libart.so!art::Monitor::Unlock(art::Thread*) + 0xa0
[task 2021-11-05T15:08:45.731Z] 15:08:45     INFO -      rsp = 0x00007fff9840bc30   rip = 0x00007f1278b1c300
[task 2021-11-05T15:08:45.731Z] 15:08:45     INFO -      Found by: stack scanning

This looks to me like a pre-existing shutdown issue unrelated to bug 1706266.

Assignee: nobody → botond
Status: NEW → ASSIGNED
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4a8df19c3838
Avoid a debug assertion on shutdown in InputQueue::Clear(). r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: