Bug 1739663 - Avoid a debug assertion on shutdown in InputQueue::Clear(). r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D130521