gfx/layers/apz/src/InputQueue.cpp
@@ -1021,7 +1021,14 @@ void InputQueue::UpdateActiveApzc(
 }
 
 void InputQueue::Clear() {
-  APZThreadUtils::AssertOnControllerThread();
+  // On Android, where the controller thread is the Android UI thread,
+  // it's possible for this to be called after the main thread has
+  // already run the shutdown task that clears the state used to
+  // implement APZThreadUtils::AssertOnControllerThread().
+  // In such cases, we still want to perform the cleanup.
+  if (APZThreadUtils::IsControllerThreadAlive()) {
+    APZThreadUtils::AssertOnControllerThread();
+  }
 
   mQueuedInputs.Clear();
   mActiveTouchBlock = nullptr;
